# YozaPomo

./: .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
docs/: 柚子钟.md
docs/乱七八糟/: vibe coding-02 提升计划.md  vibe coding.md
docs/代码评审/: 20260606-修改记录.md  20260606.md
docs/发布日志/: v0.1.0.md  v0.md  发布日志.md
docs/发布日志/Blog/: 01-柚子钟.md  02-整.md
docs/开发日志/: 20260604-01.md  20260605-01.md  20260606.md
docs/开发流程/: 01-开发流程.md  03-测试规范.md
docs/开发流程/流程规范/: 01-分支策略.md
docs/技术规范/: 01-技术栈与工具链.md  02-项目结构.md  03-代码规范.md  04-数据库设计.md  05-Tauri配置规范.md
docs/设计规范/: 01-UI设计规范.md  02-交互设计规范.md
docs/需求文档/: 20260604-01.md  待归档的优化方向.md
docs/需求文档/20260604/: 20260604-bug-01.md  20260604-优化-01.md  20260604-需求-01.md
docs/需求文档/20260605/: 优化-01.md
docs/需求文档/20260606/: 优化.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: focus_commands.rs  input_commands.rs  log_commands.rs  mod.rs  settings_commands.rs  todo_commands.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/utils/: logger.rs  mod.rs  tray.rs
src/composables/: useAutoResize.ts  useClickThrough.ts  useContentHeight.ts  useFocus.ts  useSettings.ts  useTimer.ts  useTodos.ts
src/stores/: focusStore.ts  settingsStore.ts  todoStore.ts
src/types/: focus.ts  settings.ts  todo.ts
src/utils/: database.ts  format.ts  logger.ts  sound.ts
(+19 files in other folders)
