[package]
name = "yozapomo"
version = "0.1.0"
description = "YozaPomo - 跨平台桌面番茄钟应用"
authors = ["yoza"]
edition = "2021"

[lib]
name = "yozapomo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
chrono = { version = "0.4", features = ["clock"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
]
